2019-12-12  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch8.adb: Improve error message for dispatching subprogram
	formals.

2019-12-12  Gary Dismukes  <dismukes@adacore.com>

	* exp_ch9.adb (Build_Protected_Entry): Set the Scope of the new
	block to be the entity of the procedure created for the entry.

2019-12-12  Steve Baird  <baird@adacore.com>

	* sem_ch10.adb (Install_With_Clause): Check for the case of a
	circular dependency involving a predefined (or GNAT-defined)
	unit and handle that case by generating an appropropriate error
	message.

2019-12-12  Gary Dismukes  <dismukes@adacore.com>

	* sem_ch4.adb, sem_res.adb: Minor reformatting.

2019-12-12  Justin Squirek  <squirek@adacore.com>

	* sem_ch4.adb (Analyze_One_Call): Add condition to check for
	incorrectly resolved hidden controlled primitives.

2019-12-12  Ed Schonberg  <schonberg@adacore.com>

	* sem_res.adb: Fix processing of standard predefined operators.

2019-12-12  Piotr Trojanek  <trojanek@adacore.com>

	* libgnarl/a-dispat.ads (Yield): Update Global contract.

2019-12-12  Piotr Trojanek  <trojanek@adacore.com>

	* libgnat/g-altive.ads: Fix typo in comment.
	* bindo-graphs.adb: Fix repeated words in comment.
	* exp_ch4.adb: Likewise.
	* exp_ch5.adb: Likewise.
	* exp_ch7.adb: Likewise.
	* exp_pakd.adb: Likewise.
	* exp_unst.adb: Likewise.
	* exp_util.adb: Likewise.
	* freeze.adb: Likewise.
	* inline.adb: Likewise.
	* layout.adb: Likewise.
	* sem_ch12.adb: Likewise.
	* sem_ch13.adb: Likewise.
	* sem_ch4.adb: Likewise.
	* sem_ch9.adb: Likewise.
	* sem_elab.adb: Likewise.
	* doc/gnat_ugn/gnat_and_program_execution.rst: Fix repeated
	words in user documentation.
	* gnat_ugn.texi: Regenerate.

2019-12-12  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_attr.adb (Expand_Size_Attribute): Look directly at the
	prefix to detect the bit-packed slices.  Apply the checks last
	in case the attribute needs to be processed by the back-end.
	* exp_ch4.adb (Expand_N_Slice): Do not create a temporary for